--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "connect": "~2.11.0",
     "express": "~3.4.4",
     "mongoose": "~3.8.0",
-    "session-mongoose": "~0.3.2"
+    "session-mongoose": "~0.3.2",
+    "ejs": "~0.8.4",
+    "request": "~2.27.0",
+    "mongoose-shortid": "~0.4.1"
   },
   "engines": {
     "node": "0.10.x"
