--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "request": "~2.27.0",
     "mongoose-shortid": "~0.4.1",
     "knox": "~0.8.6",
-    "box2dweb": "~2.1.0b"
+    "rimraf": "~2.2.2"
   },
   "engines": {
     "node": "0.10.x"
