--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "request": "~2.27.0",
     "mongoose-shortid": "~0.4.1",
     "knox": "~0.8.6",
-    "rimraf": "~2.2.2"
+    "rimraf": "~2.2.2",
+    "ejs-locals": "~1.0.2"
   },
   "engines": {
     "node": "0.10.x"
